refactor: specify Android minimum supported version in link name

--- a/index.html
+++ b/index.html
@@ -198,8 +198,7 @@
 <br>
 <h3>Скачать для Android</h3>
 <ul>
-<li><h5><a href="https://github.com/Doom2D/flake.nix/releases/latest/download/Doom2D-Forever.apk">Doom2D Forever, Android (RUS/ENG)</a></h5></li>
-
+<li><h5><a href="https://github.com/Doom2D/flake.nix/releases/latest/download/Doom2D-Forever.apk">Doom2D Forever, Android 4.0.1+ (RUS/ENG)</a></h5></li>
 </ul>
 
 <br>
