--- a/index.html
+++ b/index.html
@@ -180,35 +180,37 @@
     <section id="download" class="text-secondary">
       <div class="container">
         <h2 class="text-center text-uppercase text-secondary mb-0">Скачать</h2>
+        <br/>
+        <h2 class="text-center text-uppercase text-secondary mb-0">ENG/РУС</h2>
         <hr class="dark mb-5 ">
         <div class="row " >
           <div class="col-lg-8 mx-auto">
             
 			<h3>Скачать для Windows</h3>
 <ul>
-<li><h5><a href="https://github.com/Doom2D/flake.nix/releases/latest/download/doom2df_windows.x86.zip">Windows XP/7/10/11 (RUS/ENG)</a></h5></li>
+<li><h5><a href="https://github.com/Doom2D/flake.nix/releases/latest/download/doom2df_windows.x86.zip">Windows XP/7/10/11 (.zip)</a></h5></li>
 <!-- <li><h5><a href="https://github.com/Doom2D/flake.nix/releases/latest/download/doom2df_win64.x86-64.zip">Doom2D Forever, Windows XP/7/10/11 (RUS/ENG, x64)</a></h5></li> -->
 </ul>
 
 <br>
 <h3>Скачать для Android</h3>
 <ul>
-<li><h5><a href="https://github.com/Doom2D/flake.nix/releases/latest/download/Doom2D-Forever.apk">Android 4.0.1+ (RUS/ENG)</a></h5></li>
+<li><h5><a href="https://github.com/Doom2D/flake.nix/releases/latest/download/Doom2D-Forever.apk">Android 4.0.1+ (.apk)</a></h5></li>
 </ul>
 
 <br>
 <h3>Скачать для Apple Macintosh</h3>
 <ul>
-<li><h5><a href="https://github.com/Doom2D/flake.nix/releases/latest/download/Doom2D-Forever.dmg ">macOS 11.0+ (RUS/ENG)</a></h5></li>
+<li><h5><a href="https://github.com/Doom2D/flake.nix/releases/latest/download/Doom2D-Forever.dmg ">macOS 11.0+ (.dmg)</a></h5></li>
 </ul>
 
 <br>
 <h3>Скачать для Linux</h3>
 <ul>
-<li><h5><a href="https://deadsoftware.ru/files/terminalhash/d2df-linux-i386.tar.gz">i686, tarball (RUS/ENG)</a></h5></li>
-<li><h5><a href="https://deadsoftware.ru/files/terminalhash/d2df-linux-amd64.tar.gz">amd64, tarball (RUS/ENG)</a></h5></li>
+<li><h5><a href="https://deadsoftware.ru/files/terminalhash/d2df-linux-i386.tar.gz">i686 (.tar.gz)</a></h5></li>
+<li><h5><a href="https://deadsoftware.ru/files/terminalhash/d2df-linux-amd64.tar.gz">amd64 (.tar.gz)</a></h5></li>
 <!--<p>Игра требует следующие пакеты: libgme opus opusfile libvorbis mpg123 openal enet libmodplug sdl2 xmp. Названия могут разниться между дистрибутивами.</p>-->
-<li><h5><a href="https://aur.archlinux.org/packages/doom2df-bin/">AUR-пакет</a></h5></li>
+<li><h5><a href="https://aur.archlinux.org/packages/doom2df-bin/">AUR пакет</a></h5></li>
 <p>Обсуждение <a href="/forum/viewtopic.php?f=11&t=2919">на форуме</a></p>
 </ul>
 
