refactor: mention x64 together with x86 for Windows builds

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 
 			<h3>Windows XP/7/10/11</h3>
 <ul>
-<li><h5><a href="https://github.com/Doom2D/flake.nix/releases/latest/download/doom2df_windows.x86.zip">Сборка для x86 (.zip)</a></h5></li>
+<li><h5><a href="https://github.com/Doom2D/flake.nix/releases/latest/download/doom2df_windows.x86.zip">Сборка для x86 и x64 (.zip)</a></h5></li>
 <!-- <li><h5><a href="https://github.com/Doom2D/flake.nix/releases/latest/download/doom2df_win64.x86-64.zip">Doom2D Forever, Windows XP/7/10/11 (RUS/ENG, x64)</a></h5></li> -->
 </ul>
 
