refactor: change AUR link to show all doom2d related packages

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 <li><h5><a href="https://deadsoftware.ru/files/terminalhash/d2df-linux-amd64.tar.gz">Сборка для amd64 (.tar.gz)</a></h5></li>
 <li><h5><a href="https://deadsoftware.ru/files/terminalhash/d2df-linux-i386.tar.gz">Сборка для i686 (.tar.gz)</a></h5></li>
 <!--<p>Игра требует следующие пакеты: libgme opus opusfile libvorbis mpg123 openal enet libmodplug sdl2 xmp. Названия могут разниться между дистрибутивами.</p>-->
-<li><h5><a href="https://aur.archlinux.org/packages/doom2df-bin/">AUR пакет</a></h5></li>
+<li><h5><a href="https://aur.archlinux.org/packages?O=0&SeB=nd&K=doom2d&outdated=&SB=p&SO=d&PP=50&submit=Go">Пакеты для скачивания из AUR</a></h5></li>
 <p>Обсуждение <a href="/forum/viewtopic.php?f=11&t=2919">на форуме</a></p>
 </ul>
 
