fix: macOS Intel -> Intel 64

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 <br>
 <h3>macOS 11.0+</h3>
 <ul>
-<li><h5><a href="https://github.com/Doom2D/flake.nix/releases/latest/download/Doom2D-Forever.dmg ">Образ для Apple M и Intel (.dmg)</a></h5></li>
+<li><h5><a href="https://github.com/Doom2D/flake.nix/releases/latest/download/Doom2D-Forever.dmg ">Образ для Apple M и Intel 64 (.dmg)</a></h5></li>
 </ul>
 
 <br>
