fixed github link name

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 <br>
 <h3>Исходный код и разработка:</h3>
 <ul>
-<li><h5><a href="https://github.com/Doom2D/Doom2D-Forever">https://github.com/Doom2D/Doom2D-Forever</a></h5></li>
+<li><h5><a href="https://github.com/Doom2D/Doom2D-Forever">Doom2D-Forever на GitHub</a></h5></li>
 
 
 </ul>
